# CustomerServiceAgent

./: .env.example  .gitignore  AGENTS.md  API_IMPLEMENTATION_PLAN.md  DEEPEVAL_DOCS.md  GUARDRAILS_AI_DOCS.md  GUARDRAILS_AI_IN_HUB.md  PLAN.md  PYTEST_BEST_PRACTICES.md  README.md  SLOWAPI_DOCS.md  docker-compose.yaml  git_infos.txt  mermaid.txt  pyproject.toml
.agents/skills/llamaindex/: SKILL.md
.agents/skills/pytest/: SKILL.md
.codex/: config.toml
.deepeval/: .deepeval_telemetry.txt
benchmarks/benchmark_2_agent_quality_llm_judge/latest/: summary.md
dataset/: corpus.csv  products.csv
datasets/benchmark/: benchmark_1_input_guardrails_deterministic.json  benchmark_2_agent_quality_llm_judge.json  deepeval_agent_e2e.json  deepeval_e2e_goldens.json  deepeval_guardrails.json  input_guardrails_deterministic.csv
datasets/rag/: products.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: chat-message-content.tsx  (+2 more)
references/: GH_CLI_BEST_PRACTICES.md  LLAMAINDEX_BEST_PRACTICES.md
src/customer_bot/: __init__.py  config.py  llama.py  model_factory.py  observability.py
tests/: conftest.py
tests/e2e/: _benchmark_helpers.py  benchmark_2_evaluators.py  test_benchmark_1.py  test_benchmark_2.py
tests/evals/: __init__.py  config.py  conftest.py  dataset.py  deepeval_runner.py  langfuse_bridge.py  runtime.py  test_agent_quality.py  test_guardrails.py
tests/integration/: test_api_app.py  test_chat_guardrails.py  test_chat_network.py  test_ingest_cli.py  test_ingest_full_rebuild.py  test_ingestion_retrieval.py
tests/unit/: agent_fakes.py  test_agent_service.py  test_agent_tooling.py  test_agent_tracing.py  test_api_routes.py  test_chat_service.py  test_config_loading.py  test_eval_deepeval_runner.py  test_eval_langfuse_bridge.py  test_eval_runtime.py  test_grounding_guard.py  test_guardrail_decision_contract.py  test_guardrail_llm.py  test_guardrail_sanitization.py  test_guardrail_tracing.py  test_ingestion_backend.py  test_ingestion_text_mode.py  test_ingestion_validation.py  test_llama_factory.py  test_memory_backend.py  test_observability.py  test_provider_kwargs.py  test_retrieval_service.py  test_secret_pii_guard.py  test_vector_backend.py
(+107 files in other folders)
